# vulkanEngine

./: README.md  TODO_LIST  vulkanEngine.sln
vulkanEngine/: CMakeLists.txt  Font.cpp  Font.hpp  Light.cpp  Light.hpp  Object.cpp  Object.hpp  ObjectText.cpp  ObjectText.hpp  RenderBatch.cpp  RenderBatch.hpp  RenderBatchText.cpp  RenderBatchText.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  Util.hpp  combile.bat  frag.spv  fragText.spv  imgui.ini  shader.frag  shader.vert  shaderText.frag  shaderText.vert  stats.txt  vert.spv  vertText.spv  volk.c  volk.h  vulkanEngine.cpp  vulkanEngine.vcxproj  vulkanEngine.vcxproj.filters  vulkan_mem_alloc.h
vulkanEngine/fonts/: sansa_16.fnt  sansa_24.fnt  sansa_28.fnt  sansa_32.fnt  sansa_40.fnt  sansa_48.fnt  sansa_52.fnt  sansa_60.fnt
vulkanEngine/imgui-master/: imstb_rectpack.h
vulkanEngine/lib/: ECS_lib.hpp  Light.hpp  Object.hpp  ObjectReader.hpp  ObjectText.hpp  RenderBatch.hpp  RenderBatchText.hpp  RenderQueue.hpp  Renderer.hpp  Service.hpp  Texture.hpp  Util.hpp  tiny_obj_loader.h  vulkan_mem_alloc.h
vulkanEngine/models/: DriftTrack3.mtl  Lenin3D_DEF.mtl  bag.mtl  terrain.mtl  terrain2.mtl  untitled.mtl  well.mtl
vulkanEngine/shaders/: frag.spv  fragFlat.spv  fragFlatNonMaterial.spv  fragText.spv  fragVert.spv  shader.frag  shaderFlat.frag  shaderFlat.vert  shaderFlatNonMaterial.frag  shaderText.frag  shaderText.vert  vert.spv  vertFlat.spv
vulkanEngine/src/: Font.cpp  Object.cpp  ObjectReader.cpp  RenderBatch.cpp  RenderBatchText.cpp  RenderQueue.cpp  (+4 more)
(+5 files in other folders)
